<resources>
    <string name="app_name">Oblig_3</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="visible_name">Kunsthandler</string>
    <string name="no_images_found">Ingen bilder funnet</string>
    <string name="filter_screen">Velg filter</string>
    <string name="back_button">Tilbake</string>
    <string name="images_screen">Bilder</string>
    <string name="choose_border_and_size">Velg ramme og størrelse</string>
    <string name="chose_border_size">Velg rammebredde</string>
    <string name="image_preview_screen">Detaljer</string>
    <string name="no_photo_chosen">Ingen bilde valgt</string>
    <string name="add_to_cart">Legg i handlekurv</string>
    <string name="home">Hjem</string>
    <string name="wood">Tre</string>
    <string name="metal">Metall</string>
    <string name="plastic">Plast</string>
    <string name="small">Liten</string>
    <string name="medium">Medium</string>
    <string name="large">Stor</string>
    <string name="purchase">Til betaling</string>
    <string name="total_price">Totalpris:</string>
    <string name="pay">Betal</string>
    <string name="unimplemented">IKKE IMPLEMENTERT</string>
    <string name="choose_image_based_on">Velg bilde basert på</string>
    <string name="artist">Kunstner</string>
    <string name="category">Kategori</string>
    <string name="number_of_images_chosen">Antall bilder valgt:</string>
    <string name="unrecognized_filter_type">Unrecognized Filter Type</string>
    <string name="delete">Delete</string>
</resources>